# vesna

./: LICENSE  README.md  README.uk.md  README_UKR.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_advanced.py  test_auto.py  test_core.py
tests/localisation/: en.json  uk.hjson  uk.json  uk.json5  uk.toml  uk.yaml
vesna/: __init__.py  babel_handler.py  local.py  locale.py  meta_cache.py  parser.py  repository.py  vesna.py
vesna/meta/: meta_cache.py  meta_default_object.py
vesna/models/: localisation_model.py
vesna/providers/: __init__.py  base.py  dict_provider.py  fluent_provider.py  gettext_provider.py  hjson.py  json.py  json5.py  protocol.py  provider.py  toml.py  yaml.py
