[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vesna"
version = "1.0.0"

authors = [
  { name="Qulowg", email="qulowg@gmail.com" },
]

description = "A small library specialising in convenient localisation"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pydantic",
    "aiofiles",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.optional-dependencies]
toml = [
    "babel",
    "pytest",
    "pytest-asyncio",
    "rtoml",
    "ruamel.yaml",
]

[project.urls]
Homepage = "https://github.com/BRamil0/vesna"
Issues = "https://github.com/BRamil0/vesna/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"